--- a/linear-regression/python/main.ipynb
+++ b/linear-regression/python/main.ipynb
@@ -1,183 +1,64 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Testing the model\n",
+    "\n",
+    "Demostrates performance of LinearRegression built from scratch.\n",
+    "All testing is done with the california housing dataset.\n",
+    "\n",
+    "## Author\n",
+    "- Frank Palma (**@knarfamlap**)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.datasets import fetch_california_housing\n",
-    "from sklearn.linear_model import LinearRegression as SklearnLinearRegression\n",
+    "from sklearn.datasets import load_diabetes\n",
+    "from sklearn import linear_model\n",
     "from linear_regression import LinearRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = fetch_california_housing()"
+    "diabetes = load_diabetes()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X ,y = fetch_california_housing(return_X_y=True) "
+    "# split datsets into train and test sets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(diabetes.data, diabetes.target, test_size=0.2, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = pd.DataFrame(X)\n",
-    "y = pd.DataFrame(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4.526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3.585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.521</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.413</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3.422</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       0\n",
-       "0  4.526\n",
-       "1  3.585\n",
-       "2  3.521\n",
-       "3  3.413\n",
-       "4  3.422"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "sklearn_model = linear_model.LinearRegression()\n",
     "model = LinearRegression()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.fit(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-3.69419202e+01],\n",
-       "       [ 4.36693293e-01],\n",
-       "       [ 9.43577803e-03],\n",
-       "       [-1.07322041e-01],\n",
-       "       [ 6.45065694e-01],\n",
-       "       [-3.97638942e-06],\n",
-       "       [-3.78654265e-03],\n",
-       "       [-4.21314378e-01],\n",
-       "       [-4.34513755e-01]])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.coefficients"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sklearn_model = SklearnLinearRegression()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -186,35 +67,90 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sklearn_model.fit(X, y)"
+    "# fit the model from sklearn\n",
+    "sklearn_model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fit the model that we implemented\n",
+    "model.fit(X_train, y_train) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 4.36693293e-01,  9.43577803e-03, -1.07322041e-01,\n",
-       "         6.45065694e-01, -3.97638942e-06, -3.78654265e-03,\n",
-       "        -4.21314378e-01, -4.34513755e-01]])"
+       "array([ -35.55683674, -243.1692265 ,  562.75404632,  305.47203008,\n",
+       "       -662.78772128,  324.27527477,   24.78193291,  170.33056502,\n",
+       "        731.67810787,   43.02846824])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# does not include intercept \n",
     "sklearn_model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "152.5381335195406"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sklearn_model.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 152.53813352,  -35.55683674, -243.1692265 ,  562.75404632,\n",
+       "        305.47203008, -662.78772128,  324.27527477,   24.78193291,\n",
+       "        170.33056502,  731.67810787,   43.02846824])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# includes intercept at pos 0\n",
+    "model.coefficients"
    ]
   },
   {
