renames main to example

--- a/linear-regression/python/example.ipynb
+++ b/linear-regression/python/example.ipynb
@@ -155,6 +155,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "152.5381335195406"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# intercept\n",
+    "model.coefficients[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
