finished implementing log reg with newton method

--- a/linear_models/.ipynb
+++ b/linear_models/.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "        self.theta = theta_0 \n",
     "        self.step_size = step_size\n",
     "        self.max_iter = max_iter\n",
-    "        sel.eps = eps\n",
+    "        self.eps = eps\n",
     "        self.verbose = verbose\n",
     "        \n",
     "    def fit(self, x, y):\n",
@@ -46,6 +46,13 @@
     "        \n",
     "        raise NotImplementedError(\"Subclass of LinearModel must implement predict method.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
