--- a/linear_models/logistic-regression/python/logistic_regression.ipynb
+++ b/linear_models/logistic-regression/python/logistic_regression.ipynb
@@ -6,39 +6,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import sys\n",
+    "import numpy as np\n",
+    "\n",
+    "sys.path.insert(1, \"../../\")\n",
+    "from linear_model import LinearModel"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LogisticRegression(LinearModel): \n",
+    "    \"\"\"\n",
+    "    Logistic regression using Newtons Method as solver\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def fit(self, x, y):\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            x: training example inputs. shape (m, n)\n",
+    "            y: training example labels. shape (m) \n",
+    "        \"\"\"\n",
+    "        # sigmoid\n",
+    "        g = lambda x: 1 / (1 + np.exp(-x))\n",
+    "        # size of training example inputs\n",
+    "        m, n = x.shape\n",
+    "        \n",
+    "        # initialize theta\n",
+    "        if self.theta is None:\n",
+    "            self.theta = np.zeros(n)\n",
+    "            \n",
+    "        while True: \n",
+    "            theta = self.theta\n",
+    "            x_theta = x.dot(theta)\n",
+    "            # computes  gradient J\n",
+    "            J = - (1 / m) * (y - g(x_theta)).dot(x)\n",
+    "            \n",
+    "            # compute H\n",
+    "            H = (1 / m) * g(x_theta).dot(g(1 - x_theta)) * (x.T).dot(x)\n",
+    "            H_inv = np.linalg.inv(H)\n",
+    "            \n",
+    "            # update\n",
+    "            self.theta = theta - H_inv.dot(J)\n",
+    "            \n",
+    "            if np.linalg.norm(self.theta - theta, ord=1) < self.eps:\n",
+    "                break\n",
+    "                \n",
+    "    def predict(self, x):\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            x: inputs. shape (m, n)\n",
+    "            \n",
+    "        Return:\n",
+    "            \n",
+    "        \"\"\"\n",
+    "        g = lambda x: 1 / (1 + np.exp)\n",
+    "        preds = g(x.dot(self.theta))\n",
+    "        \n",
+    "        return preds\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_reg = LogisticRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.LogisticRegression at 0x11dc88910>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class LogisticRegression(object): \n",
-    "    \n",
-    "    def __init__(self, num_steps, learning_rate, fit_intercept=True):\n",
-    "        self.num_steps = num_steps\n",
-    "        self.learning_rate = learning_rate\n",
-    "        self.fit_intercept = fit_intercept\n",
-    "        \n",
-    "    def _sigmoid(scores):\n",
-    "        return 1 / (1 + np.exp(-scores))\n",
-    "    \n",
-    "    def fit(self, X, y):\n",
-    "        if (fit_intercept):\n",
-    "            self.intercept = np.ones((X.shape[0], 1))\n",
-    "            # concatenate the intercept matrix\n",
-    "            X = np.hstack((self.intercept, X))\n",
-    "        \n",
-    "        self.weights = np.zeros(X.shape[1])\n",
-    "        \n",
-    "        for step in xrange(num_steps):\n",
-    "            self.scores = np.dot(X, self.weights)\n",
-    "            \n",
-    "        \n",
-    "        "
-   ]
+   "source": []
   }
  ],
  "metadata": {
