updates read me

--- a/linear_models/logistic-regression/python/logistic_regression.ipynb
+++ b/linear_models/logistic-regression/python/logistic_regression.ipynb
@@ -61,7 +61,7 @@
     "            x: inputs. shape (m, n)\n",
     "            \n",
     "        Return:\n",
-    "            \n",
+    "            predictions of shape (m)\n",
     "        \"\"\"\n",
     "        g = lambda x: 1 / (1 + np.exp)\n",
     "        preds = g(x.dot(self.theta))\n",
@@ -78,31 +78,6 @@
    "source": [
     "log_reg = LogisticRegression()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.LogisticRegression at 0x11dc88910>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
