--- a/linear_models/svm/svm.ipynb
+++ b/linear_models/svm/svm.ipynb
@@ -2,59 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cvxopt import matrix as cvxopt_matrix\n",
     "from cvxopt import solvers as cvxopt_solvers\n",
+    "import matplotlib.pylab as pl\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SupportVectorMachine(object):\n",
-    "    \n",
-    "    def __init__(self, C=1, kernel='lib'):\n",
+    "    \"\"\"\n",
+    "    Linear Support Vector Machine\n",
+    "    \"\"\"\n",
+    "    def __init__(self, C=1.0,):\n",
     "        self.C = C\n",
-    "    \n",
-    "    def rbf(xi, xj, sigma=5.0):\n",
-    "        return  np.exp(np.linalg.norm(xi, xj) ** 2 / (2 * (sigma ** 2)))\n",
-    "    \n",
-    "    def linear(xi, xj):\n",
-    "        return np.dot(xi, xj) \n",
-    "    \n",
-    "    def poly(xi, xj):\n",
     "        \n",
-    "    \n",
-    "    def proj(self, X): \n",
-    "        m, n = X.shape\n",
-    "        if self.w is not None:\n",
-    "            return np.dot(X, self.w) + self.b\n",
-    "        \n",
-    "        else: \n",
-    "            y_pred = np.zeros(m)\n",
-    "            for i in range(m):\n",
-    "                s = 0\n",
-    "                for a, sv_y, sv = zip(self.a, self.sv_y, self.sv):\n",
-    "                    s += a * sv_y * self.kernel(X[i], sv)\n",
-    "                    \n",
-    "                y_pred[i] = s \n",
-    "            \n",
-    "            return y_pred + self.b\n",
+    "    def predict(self, X):\n",
+    "        \"\"\"\n",
+    "        Predicts labels for the provided data: {-1, 1}\n",
+    "        Args:\n",
+    "            X: dataframe that contains data. Shape (m, n)\n",
+    "        \"\"\"\n",
+    "        return np.sign(np.dot(X, self.w) + self.b) \n",
     "    \n",
     "    def fit(self, X, y):\n",
-    "        \"\"\"\"\"\"\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            X: data with m samples and n features. Shape (m, n)\n",
+    "            y: \n",
+    "        \"\"\"\n",
     "        m, n = X.shape\n",
-    "        \n",
-    "        y = y.reshape(-1, 1) * 1\n",
-    "        X_dash = y * X\n",
-    "        \n",
-    "        H = np.dot(X_dash, X_dash.T) * 1\n",
+    "        y = y.reshape(-1, 1) \n",
+    "        prod = y * X \n",
+    "        H =  np.dot(prod, prod.T)\n",
     "        \n",
     "        # Quadratic Progrmaming to solve for Lagrange Multipliers\n",
     "        P = cvxopt_matrix(H)\n",
@@ -76,38 +64,92 @@
     "        # Compute W\n",
     "        self.w = ((y * alphas).T @ X).reshape(-1, 1)\n",
     "        \n",
+    "        # Support Vectors\n",
     "        S = (alphas > 1e-4).flatten() \n",
+    "        \n",
     "        # Computer b\n",
-    "        self.b = np.mean(y[S] - np.dot(X[S], w))\n",
-    "        \n",
-    "        \n",
-    "    def predict(self, X):\n",
-    "        \"\"\"\n",
-    "        Predicts labels for the provided data: {-1, 1}\n",
-    "        Args:\n",
-    "            X: dataframe that contains data. Shape (m, n)\n",
-    "        \"\"\"\n",
-    "        return np.sign(np.dot(X, self.w) + self.b)"
+    "        self.b = y[S] - np.dot(X[S], self.w)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_lin_separable_data():\n",
+    "    # generate training data in the 2-d case\n",
+    "    mean1 = np.array([0, 2])\n",
+    "    mean2 = np.array([2, 0])\n",
+    "    cov = np.array([[0.8, 0.6], [0.6, 0.8]])\n",
+    "    X1 = np.random.multivariate_normal(mean1, cov, 100)\n",
+    "    y1 = np.ones(len(X1))\n",
+    "    X2 = np.random.multivariate_normal(mean2, cov, 100)\n",
+    "    y2 = np.ones(len(X2)) * -1\n",
+    "    return X1, y1, X2, y2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X1, y1, X2, y2 = gen_non_lin_separable_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = SupportVectorMachine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'P' must be a 'd' matrix of size (7, 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-78-b0953fbb1d6e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-74-1344cc3db07f>\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m     39\u001b[0m         \u001b[0mcvxopt_solvers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'feastol'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1e-10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m         \u001b[0msol\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcvxopt_solvers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m         \u001b[0malphas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msol\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/cvxopt/coneprog.py\u001b[0m in \u001b[0;36mqp\u001b[0;34m(P, q, G, h, A, b, solver, kktsolver, initvals, **kwargs)\u001b[0m\n\u001b[1;32m   4483\u001b[0m             'residual as dual infeasibility certificate': dinfres}\n\u001b[1;32m   4484\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4485\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mconeqp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minitvals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkktsolver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkktsolver\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/cvxopt/coneprog.py\u001b[0m in \u001b[0;36mconeqp\u001b[0;34m(P, q, G, h, dims, A, b, initvals, kktsolver, xnewcopy, xdot, xaxpy, xscal, ynewcopy, ydot, yaxpy, yscal, **kwargs)\u001b[0m\n\u001b[1;32m   1840\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mP\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtypecode\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'd'\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mP\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1841\u001b[0m             raise TypeError(\"'P' must be a 'd' matrix of size (%d, %d)\"\\\n\u001b[0;32m-> 1842\u001b[0;31m                 %(q.size[0], q.size[0]))\n\u001b[0m\u001b[1;32m   1843\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mfP\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbeta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1844\u001b[0m             \u001b[0mbase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msymv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mP\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbeta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbeta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'P' must be a 'd' matrix of size (7, 7)"
+     ]
     }
    ],
    "source": [
-    "len(np.array([[2, 2], [2, 2], [2, 2]]))"
+    "clf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf.w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf.b"
    ]
   },
   {
